--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,21 @@
+/* @mixin mobile {
+  @media screen and (max-width: 480px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin laptop {
+  @media screen and (max-width: 1200px) {
+    @content;
+  }
+} */
+
 .formContainer {
   background-color: #a7bcff;
   height: 100vh;
@@ -98,6 +116,8 @@
 }
 .logo{
   font-weight: bold;
+  font-style: 24px;
+  color: #5d5b8d;
 }
 .user{
   display: flex;
@@ -177,6 +197,7 @@ object-fit: cover;
 background-color: #ddddf7;
 padding: 10px;
 height: calc(100% - 160px);
+overflow: scroll;
 }
 .input{
   height: 50px;
@@ -212,4 +233,47 @@ height: calc(100% - 160px);
   color: white;
   background-color: #8da4f1;
   cursor: pointer;
+}
+.message{
+  display: flex;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+.messageInfo{
+  display: flex;
+  flex-direction: column;
+  color: gray;
+  font-weight: 300;
+}
+.messageInfo img{
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+.messageContent{
+  max-width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.messageContent p{
+  background-color: white;
+  padding: 10px 20px;
+  border-radius: 0px 10px 10px 10px;
+}
+.messageContent img{
+  width: 50%;
+}
+.owner{
+  flex-direction: row-reverse;
+}
+.owner p{
+  background-color: #8da4f1;
+  color: white;
+  border-radius: 10px 0px 10px 10px;
+  max-width: max-content;
+}
+.owner .messageContent{
+  align-items: flex-end;
 }
